Corrected spacing when the screen only fits one element

--- a/css/selected-quizz.css
+++ b/css/selected-quizz.css
@@ -128,3 +128,9 @@
 		font-weight: 700;
 	}
 } 
+
+@media (max-width: 469px){
+	.quizz .options {
+		justify-content: center;
+	}
+}
